syntax = "proto3";

option go_package = "github.com/mlaterman/remote-exec/pkg/proto";

service Executor {
  rpc Start(StartProcess) returns (ProcessID);
  rpc Stop(ProcessID)     returns (StopResponse);
  rpc Status(ProcessID)   returns (StatusResponse);
  rpc Output(ProcessID)   returns (stream OutputResponse);
}

message StartProcess {
  string cmd = 1;
  repeated string args = 2;
  message limits {
    uint64 cpu = 1;
    uint64 mem = 2;
    uint64 io = 3;
  }
}

message ProcessID {
  string id = 1;
}

message StopResponse{
}

message StatusResponse{
  string error = 1;
  enum status {
    running = 0;
    stopped = 1;
    crashed = 2;
  }
}

message OutputResponse {
  string stdout = 1;
  string stderr = 2;
}
